<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Microphone</string>
    <string name="RECORD">Record</string>
    <string name="DATA">Materials</string>
    <string name="SETTINGS">Settings</string>
    <string name="WAITING_FOR_RECORD">Please wait,\napp is waiting for record</string>
    <string name="CHANGE_ROLE">Change role</string>
    <string name="CAMERA_ROLE_NORMAL">Normal</string>
    <string name="CAMERA_ROLE_SQUARE">Square</string>
    <string name="SELECT_ROLE">Select camera role</string>
    <string name="CAMERA_ROLE">Camera role</string>
    <string name="OTHER_SETTINGS">Other settings</string>
    <string name="CAMERA">Camera</string>
    <string name="MICROPHONE">Microphone</string>
    <string name="UNKNOWN">Unknown</string>
    <string name="SAVE">Save</string>
    <string name="CANCEL">Cancel</string>
    <string name="CONNECTED_WITH_DEVICE">Paired with device:</string>
    <string name="WAITING_FOR_CONNECTION">Waiting for connection</string>
    <string name="ERROR_REMOTE_ROLE_CHECK">Error remote device\'s role recognition</string>
    <string name="SAME_ROLE" formatted="false">Remote device has the same role \'%s\'.\nSimilar roles are not allowed</string>
    <string name="CONNECTION_ERROR_RETRY_AGAIN">Error connecting with remote device. Retry again</string>
    <string name="DEVICES">Devices</string>
    <string name="CONNECTING">Connecting…</string>
    <string name="CONNECTION">Connection</string>
    <string name="CONNECTION_ESTABLISHED">Connection established</string>
    <string name="CONNECTION_ERROR_APP_NOT_RUNNING">Connection has not been established. Maybe this app is not running on remote device</string>
    <string name="LOOKING_FOR_DEVICES">Searching…</string>
    <string name="CONNECTION_IS_NOT_EXISTING">No connection with other devices</string>
    <string name="CANCEL_CONNECTION">Abort connection?</string>
    <string name="INTERRUPT">Interrupt</string>
    <string name="DEVICES_SEARCHING">Searching</string>
    <string name="CONNECTION_IS_INTERRUPTED">Connection interrupted</string>
    <string name="CONNECTION_NOT_ESTABLISHED">Connection not established</string>
    <string name="VIDEO_IS_SAVING_WAIT">Video is saving, please wait</string>
    <string name="PROCESSING">Processing</string>
    <string name="IMAGE">IMAGE</string>
    <string name="SHARE">Share</string>
    <string name="DELETE">Delete</string>
    <string name="BLUETOOTH">Bluetooth</string>
    <string name="WIFI">Wi-Fi</string>
    <string name="SEARCHING">Searching…</string>
    <string name="TASK">Problem</string>
    <string name="FIRST_SLIDE_TEXT">You do not have a camcorder with an external microphone, but you would like to record a video that is both high quality in image AND sound.</string>
    <string name="SOLUTION">Solution</string>
    <string name="SECOND_SLIDE_TEXT">With this app, you will be able to use your mobile device as a camera and another mobile device as a mic! Audio and video will automatically be synced for a perfect high quality recorded video. Note: Any bluetooth enabled device can be used for this application.</string>
    <string name="PLUG_IN">Connection</string>
    <string name="THIRD_SLIDE_TEXT">Connect both devices via bluetooth or wifi</string>
    <string name="FOURTH_SLIDE_TEXT">Use one of the devices as the camera</string>
    <string name="FIFTH_SLIDE_TEXT">And second as the microphone</string>
    <string name="SIXTH_SLIDE_TEXT">Chose whichever device you would like to serve as either the mic or the camera. Start recording, pause video, and continue recording video all from your Mic - connected device.</string>
    <string name="MATERIALS">Materials</string>
    <string name="SEVENTH_SLIDE_TEXT">Review the recorded materials on the camera device. Share and upload videos as usual.</string>
    <string name="CHOOSE_CURRENT_DEVICE_ROLE">Choose role of this\ndevice</string>
    <string name="YOU_CAN_CHANGE_ROLE_IN_FUTURE">You can always change role in future, in settings</string>
    <string name="START_RECORDING">Start recording…</string>
    <string name="REFRESH">Refresh</string>
    <string name="CHOOSE_APP_LANGUAGE">Choose app language</string>
    <string name="ENGLISH_LANGUAGE">English</string>
    <string name="RUSSIAN_LANGUAGE">Russian</string>
    <string name="CHINESE_LANGUAGE">Chinese</string>
    <string name="JAPANESE_LANGUAGE">Japanese</string>
    <string name="KOREAN_LANGUAGE">Korean</string>
    <string name="BACK">Back</string>
    <string name="CHANGE_APP_LANGUAGE">Change app language</string>
    <string name="VIDEO_IS_SAVING">Video is being saved…</string>
    <string name="VIDEO_MERGE_ERROR">Video record error</string>
    <string name="VIDEO_HAS_BEEN_SAVED">Video has been saved into meterials</string>
    <string name="WIFI_DIRECT">Wifi Direct</string>
    <string name="NEXT">Next</string>
    <string name="ACCEPT_CONNECTION">Incoming connection. Accept?</string>
    <string name="YES">Yes</string>
    <string name="NO">No</string>
    <string name="CONNECTION_CANCELED_BY_USER">Connection is canceled by user</string>
    <string name="NOT_ENOUGH_FREE_SPACE">Not enough free space</string>
    <string name="ENABLE_WIFI_DIRECT">Please, enable Wifi Direct in settings, otherwise you will connect only by Bluetooth</string>
    <string name="DELETE_VIDEO" formatted="false">Delete video \'%s\'?</string>
    <string name="DELETE_FILES" formatted="false">Delete %d files?</string>
    <string name="RECORD_QUALITY">Record quality</string>
    <string name="VIEW_OPPORTUNITIES">View opportunities</string>
    <string name="VIDEO_RECORD_QUALITY">Video record quality</string>
    <string name="QUALITY_HIGH">High</string>
    <string name="QUALITY_NORMAL">Normal</string>
    <string name="QUALITY_LOW">Low</string>
    <string name="RECORD_AUDIO_QUALITY">Audio quality</string>
    <string name="FREE_SPACE_ENDS">Running out of space on the disk. Recording will be stopped in a minute</string>
    <string name="RECORD_STOPPED_NOT_ENOUGH_FREE_SPACE">Recording has stopped due to lack of free disk space</string>
    <string name="ONLY_FOR_CAMERA">These settings are only available for camera role.</string>
    <string name="RECORD_STOPPED_DUE_TO_MAX_FILE_LENGTH">Recording has stopped due to the maximum file size</string>
    <string name="FILE_IS_RUNNING_OUT_OF_MAX_SIZE">Warning. File size reaches 2GB. Recording will soon be stopped.</string>
    <string name="CHANGE_ROLE_TO">Change role to</string>
    <string name="AUDIO_PLAY_ERROR">Audio play error</string>
    <string name="PROCESSING_AUDIO">Processing audio</string>
    <string name="AUDIO_ENCODING_ERROR">Audio encoding error</string>
    <string name="PROCESSING_VIDEO">Processing video…</string>
    <string name="ATTENTION">Attention</string>
    <string name="VIDEO_WILL_NOT_BE_SAVED">Video will not be saved if cancel!</string>
    <string name="VIDEO_PLAYBACK_ERROR">Video error</string>
    <string name="SYNC">Sync</string>
    <string name="EIGHTH_SLIDE_TEXT">Adjust the timing of the video and audio tracks before combining them into a finished file</string>

</resources>