<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@drawable/fragment_bg"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/CHANGE_ROLE"
              android:textSize="22sp"
              android:gravity="center_vertical"
              android:textColor="#fff"
              android:textStyle="bold"
              android:id="@+id/change_role"
              android:clickable="true"
              android:drawableRight="@drawable/ic_action_next_item"
              android:padding="10dp"
              android:drawablePadding="5dp"/>
    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/OTHER_SETTINGS"
              android:textSize="22sp"
              android:gravity="center_vertical"
              android:textColor="#fff"
              android:textStyle="bold"
              android:clickable="true"
              android:id="@+id/other_settings"
              android:drawableRight="@drawable/ic_action_next_item"
              android:padding="10dp"
              android:drawablePadding="5dp"/>
    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="48dp"
                  android:layout_marginTop="20dp"
                  android:visibility="gone"
                  android:id="@+id/role_group"
                  android:layout_gravity="center_horizontal"
                  android:orientation="horizontal">
        <Button android:layout_width="120dp"
                android:layout_height="fill_parent"
                android:text="@string/CAMERA"
                android:background="@drawable/settings_button_bg_selector"
                android:id="@+id/camera"/>
        <Button android:layout_width="120dp"
                android:layout_height="fill_parent"
                android:text="@string/MICROPHONE"
                android:background="@drawable/settings_button_bg_selector"
                android:id="@+id/mic"/>
    </LinearLayout>
    <Button android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/SAVE"
            android:id="@+id/save_button"
            android:visibility="gone"
            android:background="@drawable/action_button_bg"/>
    <Button android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/CANCEL"
            android:visibility="gone"
            android:id="@+id/cancel_button"
            android:background="@drawable/cancel_button_bg"/>
</LinearLayout>