<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@drawable/fragment_bg"
              android:gravity="center_horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView android:layout_width="wrap_content"
              android:layout_height="0dp"
              android:layout_weight="1"
              android:textSize="20sp"
              android:textColor="@color/default_text_color"
              android:padding="5dp"
              android:gravity="center"
              android:id="@+id/message"
              android:visibility="gone"
              android:text="@string/ONLY_FOR_CAMERA"/>
    <ScrollView android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:id="@+id/quality_group"
                android:layout_weight="1">
        <LinearLayout android:layout_width="fill_parent"
                      android:orientation="vertical"
                      android:gravity="center_horizontal"
                      android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/VIDEO_RECORD_QUALITY"
                      android:textColor="@color/action_bar_red"
                      android:textSize="22sp"/>
            <Button android:layout_width="120dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/QUALITY_HIGH"
                    android:onClick="onClick"
                    android:textColor="@color/default_text_color"
                    android:background="@drawable/settings_button_bg_selector"
                    android:id="@+id/video_high"/>
            <Button android:layout_width="120dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/QUALITY_NORMAL"
                    android:textColor="@color/default_text_color"
                    android:onClick="onClick"
                    android:background="@drawable/settings_button_bg_selector"
                    android:id="@+id/video_normal"/>
            <Button android:layout_width="120dp"
                    android:layout_height="48dp"
                    android:text="@string/QUALITY_LOW"
                    android:onClick="onClick"
                    android:textColor="@color/default_text_color"
                    android:background="@drawable/settings_button_bg_selector"
                    android:id="@+id/video_low"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="15dp"
                      android:visibility="gone"
                      android:text="@string/RECORD_AUDIO_QUALITY"
                      android:textColor="@color/action_bar_red"
                      android:textSize="22sp"/>
            <Button android:layout_width="120dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="15dp"
                    android:visibility="gone"
                    android:text="@string/QUALITY_HIGH"
                    android:onClick="onClick"
                    android:background="@drawable/settings_button_bg_selector"
                    android:id="@+id/audio_high"/>
            <Button android:layout_width="120dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:visibility="gone"
                    android:text="@string/QUALITY_NORMAL"
                    android:onClick="onClick"
                    android:background="@drawable/settings_button_bg_selector"
                    android:id="@+id/audio_normal"/>
            <Button android:layout_width="120dp"
                    android:layout_height="48dp"
                    android:text="@string/QUALITY_LOW"
                    android:visibility="gone"
                    android:onClick="onClick"
                    android:background="@drawable/settings_button_bg_selector"
                    android:id="@+id/audio_low"/>
        </LinearLayout>
    </ScrollView>

    <Button android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:text="@string/SAVE"
            android:onClick="onClick"
            android:id="@+id/save_button"
            android:background="@color/action_bar_red"/>

</LinearLayout>