<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="300dp"
              android:background="@color/white"
              android:layout_height="150dp">
    <TextView android:layout_width="fill_parent"
              android:layout_height="0dp"
              android:layout_weight="1"
              android:gravity="center"
              android:id="@+id/message"
              android:text="@string/ACCEPT_CONNECTION"
              android:textColor="@color/default_text_color"/>
    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="48dp">
        <Button android:layout_width="100dp"
                android:layout_height="32dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/action_button_bg"
                android:textColor="@color/white"
                android:id="@+id/ok"
                android:text="@string/YES"/>
        <TextView android:layout_width="0dp" android:layout_weight="1" android:layout_height="1dp"/>
        <Button android:layout_width="100dp"
                android:layout_height="32dp"
                android:layout_marginRight="20dp"
                android:id="@+id/cancel_button"
                android:background="@drawable/dialog_cancel_button_bg"
                android:textColor="@color/default_text_color"
                android:text="@string/NO"/>
    </LinearLayout>
</LinearLayout>