<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fragment_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:gravity="center"
            android:text="@string/BLUETOOTH"
            android:textColor="@color/default_text_color" />

        <TextView
            android:id="@+id/select_wifi"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="#3D3E41"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/WIFI"
            android:textColor="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/caption"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/DEVICES"
        android:textColor="@color/default_text_color"
        android:textSize="18sp" />

    <include layout="@layout/separator" />

    <ListView
        android:id="@+id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:divider="@null" >
    </ListView>

</LinearLayout>