<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@drawable/fragment_bg"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="48dp"
                  android:orientation="horizontal">
        <TextView android:layout_width="0dp"
                  android:layout_height="48dp"
                  android:text="@string/BLUETOOTH"
                  android:gravity="center"
                  android:id="@+id/select_bt"
                  android:clickable="true"
                  android:background="#3D3E41"
                  android:textColor="@color/white"
                  android:layout_weight="1"/>
        <TextView android:layout_width="0dp"
                  android:layout_height="48dp"
                  android:text="@string/WIFI"
                  android:gravity="center"
                  android:textColor="@color/default_text_color"
                  android:background="@color/transparent"
                  android:layout_weight="1"/>
    </LinearLayout>
    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:textSize="18sp"
              android:layout_marginTop="5dp"
              android:textColor="@color/default_text_color"
              android:id="@+id/caption"
              android:text="@string/DEVICES"/>
    <include layout="@layout/separator"/>
    <ListView android:layout_width="fill_parent"
              android:layout_height="match_parent"
              android:divider="@null"
              android:id="@+id/list">
    </ListView>
</LinearLayout>